alignment fixes

--- a/assets/css/mobile-style.css
+++ b/assets/css/mobile-style.css
@@ -49,3 +49,9 @@
     margin-left: -4vmin;
   }
 }
+
+@media only screen and (max-width: 991px) {
+  header .nav-item:last-child {
+    padding-right: 0em;
+  }
+}
